--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,7 @@ httpx>=0.24.0
 python-multipart>=0.0.5
 numpy>=1.24.0
 tqdm>=4.65.0
+emoji>=2.2.0
+protobuf>=3.20.0
+sentencepiece>=0.1.99
+tiktoken>=0.5.0
